modify layout, add libraries

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
 Theme Name: MR Theme
 Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
+Author: Marek Radzik
+Author URI: https://www.linkedin.com/in/marek-radzik-9190b9194/
 Description: Description
 Version: 1.0.0
 Tested up to: 5.4
@@ -10,7 +10,7 @@ Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: mr-theme
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: Bootstrap, Wordpress, Responsive
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
