--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: "Roboto";
+  src: local("Roboto"), local("Roboto-Regular"), url("/wp-content/themes/mr-theme/fonts/roboto/Roboto-Regular.ttf") format("truetype");
+}
+
+body {
+  font-family: "Roboto" !important;
+  font-size: 1.2rem !important;
+}
+
+.site-footer {
+  color: #fff;
+  background: #26292c;
+  position: relative;
+  bottom: -32px;
+}
+
 .site-footer a {
   color: #08a742 !important;
 }
@@ -36,13 +53,6 @@
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
   color: #08a742;
-}
-
-.site-footer {
-  color: #fff;
-  background: #26292c;
-  position: relative;
-  bottom: -25px;
 }
 
 @media only screen and (max-width: 700px) {
