--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,31 @@ body {
   font-size: 1.2rem !important;
 }
 
-.site-footer {
-  color: #fff;
+.entry-header {
   background: #26292c;
+  color: #fff;
+}
+
+.entry-header a {
+  color: #3aaa35 !important;
+}
+
+.section-contact {
+  background: #26292c;
+  color: #fff;
+}
+
+.section-contact a {
+  color: #3aaa35 !important;
+}
+
+.site-footer {
+  color: #26292c;
   position: relative;
-  bottom: -32px;
 }
 
 .site-footer a {
-  color: #08a742 !important;
+  color: #3aaa35 !important;
 }
 
 .scrollup-mr {
@@ -39,6 +55,7 @@ body {
 }
 
 .menu-fixed {
+  opacity: 0.9;
   -webkit-box-shadow: 0px 0px 20px 0px #d9d9d9;
   box-shadow: 0px 0px 20px 0px #d9d9d9;
 }
@@ -47,12 +64,18 @@ body {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show > .nav-link {
-  color: #08a742;
+  color: #3aaa35;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #08a742;
+  color: #3aaa35;
+}
+
+#primary {
+  position: relative;
+  top: -45px;
+  min-height: 60vh;
 }
 
 @media only screen and (max-width: 700px) {
