--- a/css/style.scss
+++ b/css/style.scss
@@ -11,13 +11,35 @@ body {
     font-size: 1.2rem !important;
 }
 
-.entry-header {
-    background: #26292c;
-    color: #fff;
+.site-branding {
+    display: inline-flex;
+}
 
-    a {
-        color: $base-color !important;
-    }
+.menu {
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
+    box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
+}
+
+.navbar-light .navbar-nav .active > .nav-link,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show > .nav-link {
+    color: $base-color;
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+    color: $base-color;
+}
+
+#primary {
+    min-height: 60vh;
+}
+
+.primary-home {
+    position: relative;
+    top: -37px;
 }
 
 .section-contact {
@@ -51,34 +73,19 @@ body {
     z-index: 2;
 }
 
-.menu {
-    background: #fff;
-    transition: all 1.2s;
-}
-
-.menu-fixed {
-    opacity: 0.9;
-    -webkit-box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
-    -moz-box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
-    box-shadow: 0px 0px 20px 0px rgba(217, 217, 217, 1);
-}
-
-.navbar-light .navbar-nav .active > .nav-link,
-.navbar-light .navbar-nav .nav-link.active,
-.navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .show > .nav-link {
-    color: $base-color;
-}
-
-.navbar-light .navbar-nav .nav-link:focus,
-.navbar-light .navbar-nav .nav-link:hover {
-    color: $base-color;
-}
-
-#primary {
+.polish-flag {
+    padding: 2px;
     position: relative;
-    top: -45px;
-    min-height: 60vh;
+    top: -4px;
+}
+
+.img-sign {
+    background-image: url("/wp-content/themes/mr-theme/img/sign.png");
+    height: 32px;
+    width: 32px;
+    display: inline-flex;
+    vertical-align: inherit;
+    background-repeat: no-repeat;
 }
 
 @media only screen and (max-width: 700px) {
