--- a/css/style.scss
+++ b/css/style.scss
@@ -58,6 +58,10 @@ body {
     a {
         color: $base-color !important;
     }
+
+    a:hover {
+        color: #ccc !important;
+    }
 }
 
 .scrollup-mr {
@@ -86,6 +90,10 @@ body {
     display: inline-flex;
     vertical-align: inherit;
     background-repeat: no-repeat;
+}
+
+.fachkrafte-anfrage-content {
+    display: none;
 }
 
 @media only screen and (max-width: 700px) {
