--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,22 @@ body {
   display: none;
 }
 
+.dropdown-toggle {
+  top: 8px;
+  position: relative;
+  text-decoration: none !important;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.dropdown-toggle:hover,
+.dropdown-toggle:active {
+  color: #3aaa35;
+}
+
+.dropdown-item:visited {
+  color: rgba(0, 0, 0, 0.5);
+}
+
 @media only screen and (max-width: 700px) {
   .navbar li {
     text-align: center;
