--- a/css/style.scss
+++ b/css/style.scss
@@ -43,11 +43,11 @@ body {
 }
 
 .section-contact {
-    background: #26292c;
+    background: $base-color;
     color: #fff;
 
     a {
-        color: $base-color !important;
+        color: #fff !important;
     }
 }
 
@@ -59,8 +59,13 @@ body {
         color: $base-color !important;
     }
 
-    a:hover {
-        color: #ccc !important;
+    .impressum,
+    .datenschutz {
+        font-size: 16px;
+    }
+
+    .site-info {
+        font-size: 16px;
     }
 }
 
@@ -75,21 +80,6 @@ body {
     cursor: pointer;
     display: none;
     z-index: 2;
-}
-
-.polish-flag {
-    padding: 2px;
-    position: relative;
-    top: -4px;
-}
-
-.img-sign {
-    background-image: url("/wp-content/themes/mr-theme/img/sign.png");
-    height: 32px;
-    width: 32px;
-    display: inline-flex;
-    vertical-align: inherit;
-    background-repeat: no-repeat;
 }
 
 .fachkrafte-anfrage-content {
@@ -112,16 +102,24 @@ body {
     color: rgba(0, 0, 0, 0.5);
 }
 
+.dropdown-toggle::after {
+    content: none;
+}
+
 .dropdown-item:visited {
     color: rgba(0, 0, 0, 0.5);
 }
 
 .btn-outline-success:visited {
-    color: #28a745;
+    color: $base-color;
 }
 
 .btn-outline-success:hover {
     color: #fff;
+}
+
+.elementor-column-gap-default > .elementor-row > .elementor-column > .elementor-element-populated {
+    padding: 0 !important;
 }
 
 @media only screen and (max-width: 700px) {
